@@ -19,25 +19,11 @@ import java.util.regex.Pattern;
 @Slf4j
 @Service
 public class FilterService {
-    private final String ROOT_PATH = File.separator + "var" + File.separator + "jenkins_home"+ File.separator +"workspace"+ File.separator +"match"+ File.separator;
     private String PROFANITY_PATTERN = "";
 
     @PostConstruct
     public void init() throws IOException {
-        File currentFolder = new File(".");
-        File[] fileList = currentFolder.listFiles();
-
-        // 파일 목록 출력
-        for (File file : fileList) {
-            log.info(file.getName());
-        }
-//        try{
-//            PROFANITY_PATTERN =  Files.readString(Paths.get(ROOT_PATH + "Profanity.txt")).replaceAll("\\\"", "");
-//        } catch (BeanCreationException e){
-//            Path path = Paths.get(ROOT_PATH + "test.txt");
-//            Files.write(path, "123".getBytes());
-//            System.out.println(e);
-//        }
+        PROFANITY_PATTERN =  Files.readString(Paths.get("Profanity.txt")).replaceAll("\\\"", "");
     }
     public String filterProfanity(JsonNode jsonNode){
         String message = jsonNode.get("message").asText();
